--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,13 @@
         }
     ],
     "require": {
-        "php": ">=7.3",
-        "laravel/framework": "8.*",
-        "guzzlehttp/guzzle": "7.*"
+        "php": ">=7.2",
+        "laravel/framework": "6.*",
+        "guzzlehttp/guzzle": "~6.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.3",
-        "orchestra/testbench": "6.*"
+        "phpunit/phpunit": "^8.0",
+        "orchestra/testbench": "4.*"
     },
     "autoload": {
         "psr-4": {
